test/spec_vectors/func/fail/module_65.wat
(module (func $type-break-nested-num-vs-num (result i32) (block (br 1 (i64.const 1))) (br 0 (i32.const 1))))